Fixing CSS sizing for ReleaseTile on small screens

--- a/src/containers/ReleaseTile/index.css
+++ b/src/containers/ReleaseTile/index.css
@@ -86,3 +86,12 @@
   margin-bottom: 5vh;
   font-size: 1.5vmin;
 }
+
+@media only screen and (max-width: 1030px) {
+  .releaseTile img {
+    width: 15vh;
+    height: 15vh;
+    display: flex;
+    justify-content: flex-start;
+  }
+}
